<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
        name="loginViewModel"
        type="com.example.mvvmarchitecture.data.viewmodel.AuthViewModel"
        />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.activity.auth.LoginActivity">

        <ImageView
            android:id="@+id/login_ivLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:src="@mipmap/ic_launcher_round"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/login_tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/app_name"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_ivLogo" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_textUserInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_tvTitle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_etUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/username"
                android:text="@={loginViewModel.loginUsername}" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_textPasswordInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_textUserInputLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:text="@={loginViewModel.loginPassword}"
                android:hint="@string/password" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/login_btnLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:text="@string/login"
            android:onClick="@{() -> loginViewModel.onLogin()}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_textPasswordInputLayout" />

        <TextView
            android:id="@+id/login_tvGoToSingupPageMassage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:text="@string/create_new_acc_msg"
            android:textAllCaps="false"
            app:layout_constraintBottom_toTopOf="@+id/login_tvGoToSingupPage"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/login_btnLogin" />

        <TextView
            android:id="@+id/login_tvGoToSingupPage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/create_new_acc"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimary"
            app:layout_constraintBottom_toBottomOf="@+id/login_btnLogin"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="16dp"
            app:layout_constraintBottom_toTopOf="@+id/login_tvForgotMassage"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_btnLogin">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/login_social_media_constraintLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <ImageView
                    android:id="@+id/login_ivPhone"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_marginEnd="32dp"
                    android:src="@drawable/ic_phone"
                    android:tint="@color/colorPrimary"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/login_ivGoogle"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="ContentDescription" />

                <ImageView
                    android:id="@+id/login_ivGoogle"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_marginEnd="32dp"
                    android:src="@drawable/ic_google"
                    android:onClick="@{() -> loginViewModel.googleSingup()}"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/login_ivFacebook"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="ContentDescription" />

                <ImageView
                    android:id="@+id/login_ivFacebook"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:src="@drawable/ic_facebook"
                    android:onClick="@{() -> loginViewModel.facebookSingup()}"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="ContentDescription" />

                <ImageView
                    android:id="@+id/login_ivTwitter"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_marginStart="32dp"
                    android:src="@drawable/ic_twitter"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/login_ivFacebook"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="ContentDescription" />

                <ImageView
                    android:id="@+id/login_ivEmail"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_marginStart="32dp"
                    android:src="@drawable/ic_gmail"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/login_ivTwitter"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="ContentDescription" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/login_tvForgotMassage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_msg"
            android:textColor="@color/colorAccent"
            android:textAllCaps="false"
            android:layout_marginBottom="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ProgressBar
            android:id="@+id/login_loginProgressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="0dp"
            android:layout_height="5dp"
            android:layout_marginTop="0dp"
            android:visibility="gone"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>